When setting the textfield value via the filepicker, tell it that it's not focused so that onchange will fire as it should.  Bug 355362, r+sr=jst